Refractored code and updated it for products
- backend now performs CRUD operations
- frontend is a static react page
- docker infra hosts frontend, backend and db
- frontend in frontend/ directory
- backend in backend/ directory

--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
+
+# FRONTEND
+API_HOST=http://localhost:8080
+
+# BACKEND
+RAILS_ENV=local
+
+# DB
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=db
-POSTGRES_HOST=0.0.0.0
-RAILS_ENV=local
+POSTGRES_HOST=localhost
