implemented all features on frontend
- can list all products
- can delete products
- can single and batch create products
- can patch products
- can export to csv
- can set images for each product

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -31,9 +31,6 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
 end
 
-group :development do
-end
-
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
@@ -41,3 +38,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "dotenv", "~> 2.7"
 
 gem "ruby-lint", "~> 2.3"
+
+gem "rack-cors", "~> 1.1"
