minor bug fixes and added video

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -6,8 +6,8 @@ RUN apt update -qq
 WORKDIR /app
 
 # avoid npm installing every time
-ADD package.json ./package.json
-ADD package-lock.json ./package-lock.json
+ADD package.json package.json
+ADD package-lock.json package-lock.json
 RUN npm install
 
 ADD ./ ./
